🐛 closing HTML tag was missing

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         <div class="commit">
             <code class="-mt-1">
                 <a href="" id="commit-link" target="_blank">
-                    <i class="fas fa-code-branch"></i> main<span class="at">@</span><span id="commit"</span>
+                    <i class="fas fa-code-branch"></i> main<span class="at">@</span><span id="commit"></span>
                 </a>
             </code>
         </div>
