:sparkles: add Dribbble Shots

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,11 @@
     <div class="git-container" id="repos">
     </div>
 </div>
+<div class="dribbble-shots">
+    <h2><span class="normal">Dribbble Shots</span></h2>
+    <div class="dribbble-container" id="shots">
+    </div>
+</div>
     <div class="footer">
         <div class="status">
             <i class="fas fa-circle" id="status-icon"></i>
