--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
     <!-- import librarys -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
 </head>
 <body>
@@ -51,16 +52,16 @@
         </div>
     </div>
     <div class="git-repos">
-        <h2><span class="normal">Git Repos</span></h2>
+        <h2>Git Repos</h2>
         <div class="git-container" id="repos">
         </div>
     </div>
     <div class="dribbble-shots">
-        <h2><span class="normal">Dribbble Shots</span></h2>
+        <h2>Dribbble Shots</h2>
         <div class="dribbble-container" id="shots">
         </div>
     </div>
-    <div class="footer">
+    <div class="bar">
         <div class="status">
             <i class="fas fa-circle" id="status-icon"></i>
             <div id="status"></div>
@@ -71,6 +72,9 @@
                 <a href="" id="commit-link" target="_blank">main@<span id="commit"></span></a>
                 <span class="version-v">V</span><span id="version"></span>
         </div>
+    </div>
+    <div class="footer">
+        <div>© fabian.lol • <script type="text/javascript">document.write(new Date().getFullYear());</script></div>
     </div>
 
     <!-- import JS -->
