--- a/src/index.html
+++ b/src/index.html
@@ -73,8 +73,10 @@
                 <span class="version-v">V</span><span id="version"></span>
         </div>
     </div>
+    <div id="achievement">
+    </div>
     <div class="footer">
-        <div>© fabian.lol • <script type="text/javascript">document.write(new Date().getFullYear());</script></div>
+        <div>© fabian.lol <script type="text/javascript">document.write(new Date().getFullYear());</script> • Your visits: <span id="visits"></span></div>
     </div>
 
     <!-- import JS -->
