:adhesive_bandage: fix footer space issue

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
     <div id="achievement">
     </div>
     <div class="footer">
-        <div>© fabian.lol <script type="text/javascript">document.write(new Date().getFullYear());</script> • Your visits: <span id="visits"></span></div>
+        <div>© fabian.lol&nbsp;<script type="text/javascript">document.write(new Date().getFullYear());</script>&nbsp;• Your visits: <span id="visits"></span></div>
     </div>
 
     <!-- import JS -->
