✨ add 2 more achievements

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="git-repos">
-        <h2>Git Repos</h2>
+        <h2>Github Repositories</h2>
         <div class="git-container" id="repos">
         </div>
     </div>
