✨ add light mode favicon + change title when another tab is opened

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <!-- favicon -->
     <link rel="apple-touch-icon" type="image/png" href="https://cdn.fabian.lol/logos/favicon.png" />
     <link rel="shortcut icon" type="image/x-icon" href="https://cdn.fabian.lol/logos/favicon.png">
-    <link rel="shortcut icon" href="https://cdn.fabian.lol/logos/favicon.png">
+    <link id="dynamic-favicon" rel="shortcut icon" href="https://cdn.fabian.lol/logos/favicon.png">
     <link rel="icon" type="image/png" href="https://cdn.fabian.lol/logos/favicon.png" sizes="32x32">
     <link rel="icon" type="image/png" href="https://cdn.fabian.lol/logos/favicon.png" sizes="96x96">
 
