:sparkles: add E-Mail link

--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,10 @@
         <div class="hero-container">
             <h1><span class="normal">Hi, I'm </span><span class="text">Fabian</span></h1>
             <div class="socialmedia">
-                <a id="discord" onclick="copy2Clipboard()"><i class="fab fa-discord"></i></a>
+                <a id="discord"><i class="fab fa-discord"></i></a>
                 <a id="github" href="https://github.com/fabianskutta" target="_blank"><i class="fab fa-github"></i></a>
                 <a id="dribbble" href="https://dribbble.com/fabianskutta" target="_blank"><i class="fab fa-dribbble"></i></a>
+                <a id="e-mail" href="mailto:hello@fabian.lol"><i class="fas fa-envelope"></i></a>
             </div>
             <a onclick="functionforscroll('repos')"><div class="icon-scroll"></div></a>
         </div>
