:sparkles: new notifications

--- a/src/index.html
+++ b/src/index.html
@@ -74,8 +74,7 @@
                 <span class="version-v">V</span><span id="version"></span>
         </div>
     </div>
-    <div id="achievement">
-    </div>
+    <div id="notification">
     <div class="footer">
         <div>© fabian.lol&nbsp;<script type="text/javascript">document.write(new Date().getFullYear());</script>&nbsp;• Your visits: <span id="visits"></span></div>
     </div>
