:adhesive_bandage: update notifications

--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,7 @@
         </div>
     </div>
     <div id="notification">
+    </div>
     <div class="footer">
         <div>© fabian.lol&nbsp;<script type="text/javascript">document.write(new Date().getFullYear());</script>&nbsp;• Your visits: <span id="visits"></span></div>
     </div>
