:sparkles: new footer + small improvements

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,13 @@
     <div class="rocket-btn">
         <a href="#hero" class="btn-big btn-primary"><i class="fas fa-rocket"></i></i> launch the rocket</a>
     </div>
+    <div class="footer">
+        <div class="footer-container">
+            <a href="https://short.fabian.lol/byg" target="_blank">
+                <p>© fabian.lol&nbsp;<script type="text/javascript">document.write(new Date().getFullYear());</script>&nbsp;• Distributed under the MIT License<br>Designed & Build by Fabian Skutta</p>
+            </a>
+        </div>
+    </div>
     <div class="bar">
         <div class="status">
             <i class="fas fa-circle" id="status-icon"></i>
@@ -102,9 +109,6 @@
         </div>
     </div>
     <div id="notification">
-    </div>
-    <div class="footer">
-        <div>© fabian.lol&nbsp;<script type="text/javascript">document.write(new Date().getFullYear());</script>&nbsp;• Your visits: <span id="visits"></span></div>
     </div>
 
     <!-- import JS -->
