:speech_balloon: Correct spelling mistakes in footer

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
     <div class="footer">
         <div class="footer-container">
             <a href="https://short.fabian.lol/byg" target="_blank">
-                <p>© fabian.lol&nbsp;<script type="text/javascript">document.write(new Date().getFullYear());</script>&nbsp;• Distributed under the MIT License<br>Designed & Build by Fabian Skutta</p>
+                <p>© fabian.lol&nbsp;<script type="text/javascript">document.write(new Date().getFullYear());</script>&nbsp;• Distributed under the MIT License<br><span class="pc">Designed & Built by Fabian Skutta</span></p>
             </a>
         </div>
     </div>
