:sparkles: update footer

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
     <div class="footer">
         <div class="footer-container">
             <a href="https://short.fabian.lol/byg" target="_blank">
-                <p>© fabian.lol&nbsp;<script type="text/javascript">document.write(new Date().getFullYear());</script>&nbsp;• Distributed under the MIT License<br><span class="pc">Designed & Built by Fabian Skutta</span></p>
+                <p>© fabian.lol&nbsp;<script type="text/javascript">document.write(new Date().getFullYear());</script>&nbsp;<span class="pc">• Distributed under the MIT License</span><br>Designed & Built with <i class="fas fa-heart"></i> by <span class="fabian">Fabian</span></p>
             </a>
         </div>
     </div>
