--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
         </div>
     </div>
     <div class="rocket-btn">
-        <a href="#hero" class="btn-big btn-primary"><i class="fas fa-rocket"></i></i> launch the rocket</a>
+        <a id="rocket-btn" href="#hero" class="btn-big btn-primary"><i class="fas fa-rocket"></i></i> launch the rocket</a>
     </div>
     <div class="footer">
         <div class="footer-container">
@@ -106,6 +106,37 @@
             <i class="fas fa-code-branch"></i>
                 <a href="" id="commit-link" target="_blank">main@<span id="commit"></span></a>
                 <span class="version-v">V</span><span id="version"></span>
+        </div>
+    </div>
+
+    <div id="popup" class="popup">
+        <div class="popup-container">
+            <span class="close">&times;</span>
+            <h3>Can you find all secret achievements on my website?</h3>
+            <div class="popup-flex">
+                <div class="popup-item" id="achievement-1">
+                    <div class="popup-item-container">
+                        <svg class="popup-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72.82 122.88" fill="currentColor">
+                            <path d="M28.8,64.94,14.18,112.39H59L44.23,60.1l3.81-2A25.23,25.23,0,1,0,11.29,35.71h0a25.07,25.07,0,0,0,4,13.58A25.42,25.42,0,0,0,26,58.65l4.16,1.91L28.8,64.94ZM2.09,116.1,17.54,66A35.78,35.78,0,0,1,6.43,55,35.41,35.41,0,0,1,.82,35.71h0A35.72,35.72,0,1,1,56.56,65.23l16.26,57.65H0l2.09-6.78Z"/></svg>
+                        <p>secret</p>
+                    </div>
+                </div>
+                <div class="popup-item" id="achievement-2">
+                    <div class="popup-item-container">
+                        <svg class="popup-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72.82 122.88" fill="currentColor">
+                            <path d="M28.8,64.94,14.18,112.39H59L44.23,60.1l3.81-2A25.23,25.23,0,1,0,11.29,35.71h0a25.07,25.07,0,0,0,4,13.58A25.42,25.42,0,0,0,26,58.65l4.16,1.91L28.8,64.94ZM2.09,116.1,17.54,66A35.78,35.78,0,0,1,6.43,55,35.41,35.41,0,0,1,.82,35.71h0A35.72,35.72,0,1,1,56.56,65.23l16.26,57.65H0l2.09-6.78Z"/></svg>
+                        <p>secret</p>
+                    </div>
+                </div>
+                <div class="popup-item" id="achievement-3">
+                    <div class="popup-item-container">
+                        <svg class="popup-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72.82 122.88" fill="currentColor">
+                            <path d="M28.8,64.94,14.18,112.39H59L44.23,60.1l3.81-2A25.23,25.23,0,1,0,11.29,35.71h0a25.07,25.07,0,0,0,4,13.58A25.42,25.42,0,0,0,26,58.65l4.16,1.91L28.8,64.94ZM2.09,116.1,17.54,66A35.78,35.78,0,0,1,6.43,55,35.41,35.41,0,0,1,.82,35.71h0A35.72,35.72,0,1,1,56.56,65.23l16.26,57.65H0l2.09-6.78Z"/></svg>
+                        <p>secret</p>
+                    </div>
+                </div>
+            </div>
+            <p id="g"></p>
         </div>
     </div>
     <div id="notification">
