--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- title -->
-    <title>Fabian • fabian.lol</title>
+    <title>Fabian Skutta • fabian.lol</title>
 
     <!-- favicon -->
     <link rel="apple-touch-icon" type="image/png" href="https://cdn.fabian.lol/logos/favicon.png" />
