:sparkles: add visitorbadge

--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,7 @@
             <a href="https://short.fabian.lol/byg" target="_blank">
                 <p>© fabian.lol&nbsp;<script type="text/javascript">document.write(new Date().getFullYear());</script>&nbsp;<span class="pc">• Distributed under the MIT License</span><br>Designed & Built with <i class="fas fa-heart"></i> by <span class="fabian">Fabian</span></p>
             </a>
+            <a href="https://visitorbadge.io/status?path=https%3A%2F%2Ffabian.lol"><img src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Ffabian.lol&label=Visitors&labelColor=%23111217&countColor=%23111217" /></a>
         </div>
     </div>
     <div class="bar">
