:sparkles: add project section

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
             <ul>
                 <li class="active-link"><a href="#hero"><i class="fas fa-home"></i></a></li>
                 <li><a href="#about"><i class="fas fa-address-card"></i></a></li>
+                <li><a href="#projects"><i class="fas fa-globe"></i></a></li>
                 <li><a href="#git-repos"><i class="fab fa-github"></i></a></li>
                 <li><a href="#dribbble-shots"><i class="fab fa-dribbble"></i></a></li>
             </ul>
@@ -74,6 +75,18 @@
             <img src="https://cdn.fabian.lol/me.jpg">
             <div class="about-text" id="about-text">
             </div>
+        </div>
+    </div>
+    <div class="projects" id="projects" >
+        <h2>Projects</h2>
+        <div class="projects-container">
+            <a href="https://4tuerme.events/" target="_blank">
+                <div class="projects-item">
+                    <div class="projects-item-container">
+                        <h3 class="projects-title">4Türme Events e.V.</h3>
+                        <img src="https://cdn.fabian.lol/4tuerme.png" alt="">
+                </div>
+                </a>
         </div>
     </div>
     <div class="git-repos" id="git-repos">
