--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,8 @@
             <div class="socialmedia">
                 <a id="discord"><i class="fab fa-discord"></i></a>
                 <a id="github" href="https://github.com/fabianskutta" target="_blank"><i class="fab fa-github"></i></a>
-                <a id="codepen" href="https://codepen.io/fabianskutta" target="_blank"><i class="fab fa-codepen"></i></a>
                 <a id="dribbble" href="https://dribbble.com/fabianskutta" target="_blank"><i class="fab fa-dribbble"></i></a>
+                <a id="lastfm" href="https://www.last.fm/user/fabianskutta" target="_blank"><i class="fab fa-lastfm"></i></a>
                 <a id="e-mail" href="mailto:hello@fabian.lol"><i class="fas fa-envelope"></i></a>
             </div>
             <a href="#about"><div class="icon-scroll"></div></a>
