--- a/src/index.html
+++ b/src/index.html
@@ -80,13 +80,22 @@
     <div class="projects" id="projects" >
         <h2>Projects</h2>
         <div class="projects-container">
-            <a href="https://4tuerme.events/" target="_blank">
                 <div class="projects-item">
+                    <a href="https://4tuerme.events/" target="_blank">
                     <div class="projects-item-container">
                         <h3 class="projects-title">4Türme Events e.V.</h3>
                         <img src="https://cdn.fabian.lol/4tuerme.png" alt="">
+                    </div>
+                    </a>
                 </div>
-                </a>
+                    <div class="projects-item">
+                        <a href="https://craft-beer-festival-sendenhorst.de/" target="_blank">
+                        <div class="projects-item-container">
+                            <h3 class="projects-title">Craft Beer & Music Festival</h3>
+                            <img src="https://cdn.fabian.lol/craftbeer.png" alt="">
+                        </div>
+                        </a>
+                    </div>
         </div>
     </div>
     <div class="git-repos" id="git-repos">
