:construction_worker: changed too vite

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,6 @@
     <meta name="theme-color" content="#0B0E11">
     <meta name="twitter:card" content="summary_large_image">
 
-    <!-- import CSS -->
-    <link rel="stylesheet" href="./assets/css/style.min.css?v=2">
-
     <!-- import fontawesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
@@ -33,6 +30,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
+
+    <script type="module" src="./assets/js/main.js"></script>
 </head>
 <body>
     <div class="mode-toggle" id="color">
@@ -109,7 +108,7 @@
         </div>
     </div>
     <div class="rocket-btn">
-        <a id="rocket-btn" href="#hero" class="btn-big btn-primary"><i class="fas fa-rocket"></i></i> launch the rocket</a>
+        <a id="rocket-btn" href="#hero" class="btn-big btn-primary"><i class="fas fa-rocket"></i> launch the rocket</a>
     </div>
     <div class="footer">
         <div class="footer-container">
@@ -164,8 +163,5 @@
     </div>
     <div id="notification">
     </div>
-
-    <!-- import JS -->
-    <script src="./assets/js/script.min.js"></script>
 </body>
 </html>
