:dizzy: add scroll Animations

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
             <a href="#about"><div class="icon-scroll"></div></a>
         </div>
     </div>
-    <div class="about" id="about">
+    <div class="about hidden" id="about">
         <div class="about-container">
             <h2 class="mobile">A quick summary</h2>
             <img src="https://cdn.fabian.lol/me.jpg">
@@ -76,7 +76,7 @@
             </div>
         </div>
     </div>
-    <div class="projects" id="projects" >
+    <div class="projects hidden" id="projects" >
         <h2>Projects</h2>
         <div class="projects-container">
                 <div class="projects-item">
@@ -97,17 +97,17 @@
                     </div>
         </div>
     </div>
-    <div class="git-repos" id="git-repos">
+    <div class="git-repos hidden" id="git-repos">
         <h2>Github Repositories</h2>
         <div class="git-container" id="repos">
         </div>
     </div>
-    <div class="dribbble-shots" id="dribbble-shots">
+    <div class="dribbble-shots hidden" id="dribbble-shots">
         <h2>Dribbble Shots</h2>
         <div class="dribbble-container" id="shots">
         </div>
     </div>
-    <div class="rocket-btn">
+    <div class="rocket-btn hidden">
         <a id="rocket-btn" href="#hero" class="btn-big btn-primary"><i class="fas fa-rocket"></i> launch the rocket</a>
     </div>
     <div class="footer">
