:memo: add new Project

--- a/src/index.html
+++ b/src/index.html
@@ -82,8 +82,16 @@
                     <div class="projects-item">
                         <a href="https://craft-beer-festival-sendenhorst.de/" target="_blank">
                         <div class="projects-item-container">
-                            <h3 class="projects-title">Craft Beer & Music Festival</h3>
+                            <h3 class="projects-title">Webdesign - Craft Beer & Music Festival</h3>
                             <img src="https://cdn.fabian.lol/craftbeer.png?v=2" alt="">
+                        </div>
+                        </a>
+                    </div>
+                    <div class="projects-item">
+                        <a href="https://youtu.be/tyPUAVDX6X0" target="_blank">
+                        <div class="projects-item-container">
+                            <h3 class="projects-title">Lightdesign - Craft Beer & Music Festival</h3>
+                            <img src="https://cdn.fabian.lol/7miles.png" alt="">
                         </div>
                         </a>
                     </div>
