:fire: remove about section

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         <div class="nav-container">
             <ul>
                 <li class="active-link"><a href="#hero"><i class="fas fa-home"></i></a></li>
-                <li><a href="#about"><i class="fas fa-address-card"></i></a></li>
+                <!--<li><a href="#about"><i class="fas fa-address-card"></i></a></li>!-->
                 <li><a href="#projects"><i class="fas fa-globe"></i></a></li>
                 <li><a href="#git-repos"><i class="fab fa-github"></i></a></li>
                 <li><a href="#dribbble-shots"><i class="fab fa-dribbble"></i></a></li>
@@ -68,17 +68,17 @@
                 <a id="lastfm" href="https://www.last.fm/user/fabianskutta" target="_blank"><i class="fab fa-lastfm"></i></a>
                 <a id="e-mail" href="mailto:hello@fabian.lol"><i class="fas fa-envelope"></i></a>
             </div>
-            <a href="#about"><div class="icon-scroll"></div></a>
+            <a href="#projects"><div class="icon-scroll"></div></a>
         </div>
     </div>
-    <div class="about hidden" id="about">
+    <!--<div class="about hidden" id="about">
         <div class="about-container">
             <h2 class="mobile">A quick summary</h2>
             <img src="https://cdn.fabian.lol/me.jpg">
             <div class="about-text" id="about-text">
             </div>
         </div>
-    </div>
+    </div>!-->
     <div class="projects hidden" id="projects" >
         <h2>Projects</h2>
         <div class="projects-container">
