--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <meta property="og:image" content="https://cdn.fabian.lol/banner/fabian.lol.jpg?v=4" />
     <meta name="theme-color" content="#0B0E11">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="robots" content="noindex">
 
     <!-- import fontawesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
